--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="menu" id="menu">
         <ul>
             <li><a href="index.html">forside</a></li>
-            <li><a href="menu.html"><menu></menu></a></li>
+            <li><a href="menu.html">menu</a></li>
             <li><a href="events.html">events</a></li>
             <li><a href="deals.html">deals</a></li>
         </ul>
