--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- Navigation menu -->
     <nav class="menu" id="menu">
         <ul>
-            <li><a href="index.html">forside</a></li>
-            <li><a href="menu.html">menu</a></li>
-            <li><a href="events.html">events</a></li>
-            <li><a href="deals.html">deals</a></li>
+            <li><a href="index.html">Forside</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="deals.html">Deals</a></li>
         </ul>
     </nav>
     
