--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
         </ul>
     </nav>
     
+    <h1>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h1>
+
+    <h2>Hos Den Gule Café inviterer vi dig ind i en varm og afslappet atmosfære, hvor charme og nærvær går hånd i hånd. Her serverer vi mad og drikke med omtanke – alt fra friskbrygget kaffe og skummende cappuccinoer til lækre sandwiches, salater og hjemmebagte kager, som passer perfekt til både morgenkaffe og frokostpause.</h2>
 </body>
 </html>
