--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <title>Den gule cafe</title>
 </head>
 <body>
-    <div class="burger" id="burger">
+    <header>
+        <div class="burger" id="burger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
-    </div>
+        </div>
 
-    <!-- Navigation menu -->
-    <nav class="menu" id="menu">
-        <ul>
+        <!-- Navigation menu -->
+        <nav class="menu" id="menu">
+         <ul>
             <li><a href="index.html">Forside</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="deals.html">Deals</a></li>
-        </ul>
-    </nav>
+            </ul>
+        </nav>
     
-    <h1>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h1>
+        <h1>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h1>
 
-    <h2>Hos Den Gule Café inviterer vi dig ind i en varm og afslappet atmosfære, hvor charme og nærvær går hånd i hånd. Her serverer vi mad og drikke med omtanke – alt fra friskbrygget kaffe og skummende cappuccinoer til lækre sandwiches, salater og hjemmebagte kager, som passer perfekt til både morgenkaffe og frokostpause.</h2>
+        <h2>Hos Den Gule Café inviterer vi dig ind i en varm og afslappet atmosfære, hvor charme og nærvær går hånd i hånd. Her serverer vi mad og drikke med omtanke – alt fra friskbrygget kaffe og skummende cappuccinoer til lækre sandwiches, salater og hjemmebagte kager, som passer perfekt til både morgenkaffe og frokostpause.</h2>
+    </header>
 </body>
 </html>
