--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="burger" id="burger">
+        <div class="burger" id="burger"></div>
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
-        </div>
+       
 
         <!-- Navigation menu -->
         <nav class="menu" id="menu">
