--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="image/forsidelogo.webp" type="image">
     <title>Den gule cafe</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -23,6 +24,7 @@
             <li><a href="deals.html">Deals</a></li>
             </ul>
         </nav>
+    </header>
     
     <section>
     <h1>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h1>
@@ -30,6 +32,6 @@
     <article>Hos Den Gule Café inviterer vi dig ind i en varm og afslappet atmosfære, hvor charme og nærvær går hånd i hånd. Her serverer vi mad og drikke med omtanke – alt fra friskbrygget kaffe og skummende cappuccinoer til lækre sandwiches, salater og hjemmebagte kager, som passer perfekt til både morgenkaffe og frokostpause.</article>
     </section>
   
-    </header>
+
 </body>
 </html>
