--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         </section>
     </main>
   <footer>
-    
+    <h2>Følg mig på</h2>
+    <img src="" alt="">
+    <img src="" alt="">
   </footer>
 
 </body>
