--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </main>
   <footer>
     <h2>Følg mig på</h2>
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image/instagram.logowebp.webp" alt="instagram logo">
+    <img src="image/facebook.logo.webp" alt="facebook logo">
   </footer>
 
 </body>
