--- a/menu.html
+++ b/menu.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="image/forsidelogo.webp" type="image">
     <title>Menu</title>
+    <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
+    <header>
     <div class="burger" id="burger">
         <div class="line"></div>
         <div class="line"></div>
@@ -21,6 +24,8 @@
             <li><a href="deals.html">Deals</a></li>
         </ul>
     </nav>
+    </header>
+
     
 </body>
 </html>
