--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,15 @@
         </ul>
     </nav>
     </header>
+    <main>
+        <h2><a href="#morgenmad">Morgenmad</a></h2>
+        <h2><a href="#frokost">Frokost</a></h2>
+        <h2><a href="#drikkevarer">Drikkevarer</a></h2>
+        <h3 id="morgenmad">Morgenmad</h3>
+        <h3 id="frokost">Frokost</h3>
+        <h3 id="drikkevarer">Drikkevarer</h3>
+
+    </main>
 
     
 </body>
