--- a/menu.html
+++ b/menu.html
@@ -33,6 +33,40 @@
         <h3 id="frokost">Frokost</h3>
         <h3 id="drikkevarer">Drikkevarer</h3>
 
+        <h4>Det søde</h4>
+        <ul>
+            <li>Kardemommesnurre 32 kr.</li>
+            <li>Limesnegl 32 kr.</li>
+            <li>Croissant 32 kr.</li>
+            <li>Bananbrød 32 kr.</li>
+        </ul>
+
+        <h4>Morgentilbud 09:00-10:00 60 kr. </h4>
+        <p>Surdejsbolle med øko-smør og ost + valgfri kaffe.</p>
+
+        <h4>Surdejsbolle 38 kr.</h4>
+        <p>Øko smør og ost.</p>
+
+        <h4>Enkel morgen 100 kr.</h4>
+        <p>Surdejsbolle med øko-smør og ost, økologisk blødkogt æg og vores signatur juice.</p>
+
+        <h4>Millers brunch 115 kr.</h4>
+        <p>Surdejsbolle med øko-smør og ost, økologisk blødkogt æg, yoghurt med kompot, kokosflager, bær og frugt</p>
+
+        <h4>Yoghurt Bowl 69 kr.</h4>
+        <p>Yoghurt, kompot, kokosflager, granola, hampefrø, kakaonips, bær og frugt.</p>
+
+        <h4>Lyserød Smoothie Bowl 85 kr. </h4>
+        <p>Bana, blåbær, mango, havredrik, acai pulver, granola, kokosfalger, dadelkaramel, bær og frugt.</p>
+
+        <h4>Grøn Smoothie Bowl 85 kr.</h4>
+        <p>Banan, mango, spinat, ananas, havredrik, granola, kokosflager, dadelkaramel, bær og frugt.</p>
+
+        <img src="image/morgenmad.bolle.snurre.webp" alt="bolle og snurre">
+        <img src="image/morgenmad.bowl.webp" alt="bowl">
+        <img src="image/morgenmad.snurre.webp" alt="snurre">
+        
+
     </main>
 
     
