--- a/menu.html
+++ b/menu.html
@@ -66,8 +66,96 @@
 
         <h3 id="frokost">Frokost</h3>
 
-        
+        <h4>Grillet croissant 55 kr. </h4>
+        <p>Serranoskine og ost</p>
+
+        <h4>Toasten 85 kr.</h4>
+        <p>Froccaciabrød, pesto, aioli, serranoskinke og ost.</p>
+
+        <h4>Sandwich m. Stracciatella 95 kr. </h4>
+        <p>Froccaciabrød, pesto, mortadella, rucola, balsamicoglace, stracciatella og pistacienødder.</p>
+
+        <h4>Sandwich m. Serranoskinke eller soltørrede tomat 95 kr.</h4>
+        <p>Froccaciabrød, pesto, aioli, mozzarella, basilikum, pinjekerner og rucola. </p>
+
+        <img src="image/frokost.avocado.webp" alt="avocado">
+        <img src="image/frokost.bord.webp" alt="bord">
+        <img src="image/frokost.sandwich.webp" alt="sandwich">
+
         <h3 id="drikkevarer">Drikkevarer</h3>
+
+        <h4>kaffe</h4>
+        <ul>
+            <li>Latte 44kr.</li>
+            <li>Cappuccino 42 kr.</li>
+            <li>Flat white 42 kr.</li>
+            <li>Cortado 38 kr.</li>
+            <li>Americano 38 kr.</li>
+            <li>Dobbelt espresso 28 kr.</li>
+            <li>Kaffe Baileys 50 kr.</li>
+            <li>Iskaffe 45 kr. </li>
+            <li>+ sirup 5 kr.</li>
+        </ul>
+
+        <h4>Andre drikke</h4>
+        <ul>
+            <li>Varm kakao med flødeskum 45 kr.</li>
+            <li>Matcha 45 kr.</li>
+            <li>Ismatcha 45 kr.</li>
+            <li>Te 38 kr.</li>
+        </ul>
+
+        <h4>Kolde drikkevarer</h4>
+        <ul>
+            <li>Hjemmelavet lemonade 50 kr. </li>
+            <li>Hyldeblomstsaft 40 kr.</li>
+            <li>Hyldeblomstbrus 40 kr.</li>
+            <li>Rabarberbrus 40 kr.</li>
+            <li>Hindbærbrus 40 kr.</li>
+            <li>Abrikosbrus 40 kr.</li>
+            <li>Sportscola 40 kr.</li>
+            <li>Danskvand 40 kr.</li>
+        </ul>
+
+        <h4>Friskpresset juice 50 kr. </h4>
+        <ul>
+            <li>Signaturen: Ingefær, æble, gulerod og appelsin</li>
+            <li>Æblejuice </li>
+            <li>Appelsinjuice</li>
+        </ul>
+        <h4>Øl</h4>
+        <ul>
+            <li>Ceres Top 30 kr.</li>
+            <li>Forskelligt udvalg fra Ebeltoft </li>
+            <li> Grådbryggeri 40 kr. </li>
+        </ul>
+
+        <h4>Vin</h4>
+        <ul>
+            <li>Hvidvin 52 kr. / 250 kr.</li>
+            <li>Orangevin 52 kr. / 250 kr.</li>
+            <li>Rødvin 52 kr. / 250 kr.</li>
+        </ul>
+
+        <h4>Drinks og cocktails 68 kr. 2 ens for 110 kr.</h4>
+        <ul>
+            <li>Espressomartini </li>
+            <li>Aperol Spritz</li>
+            <li>Paloma</li>
+            <li>Amaretto Sour</li>
+            <li>Gin og tonic</li>
+            <li>Gin og rabarber</li>
+            <li>Gin og hyldeblomst</li>
+        </ul>
+
+        <img src="image/drikkevarer.drinks.webp" alt="drinks">
+        <img src="image/drikkevarer.juice.webp" alt="juice">
+        <img src="image/drikkevarer.kaffe.webp" alt="kaffe">
+        <img src="image/drikkevarer.kakao.webp" alt="kakao">
+        <img src="image/drikkevarer.spritz.webp" alt="spritz">
+        <img src="image/drikkevarer.vin.webp" alt="vin">
+        
+
 
     </main>
 
