--- a/menu.html
+++ b/menu.html
@@ -154,11 +154,20 @@
         <img src="image/drikkevarer.kakao.webp" alt="kakao">
         <img src="image/drikkevarer.spritz.webp" alt="spritz">
         <img src="image/drikkevarer.vin.webp" alt="vin">
-        
-
 
     </main>
-
+    <footer>
+        <h2>Følg mig på</h2>
+        <img src="image/instagram.logowebp.webp" alt="instagram logo">
+        <img src="image/facebook.logo.webp" alt="facebook logo">
+        <h2>Åbningstider</h2>
+        <p>Man - Lør   09:00-18:00</p>
+        <p>Søn         09:00-16:00</p>
+        <h2>Kontakt mig</h2>
+        <p>Tlf:   26 71 89 67</p>
+        <p>Mail:  dengulecafe@hotmail.com</p>
+        <p>Adresse  Jægergårdsgade 2a, Aarhus C</p>
+      </footer>
     
 </body>
 </html>
