--- a/deals.html
+++ b/deals.html
@@ -24,8 +24,13 @@
             <li><a href="deals.html">Deals</a></li>
         </ul>
     </nav>
+
     </header>
 
+    <main>
+        <h2>Kom med til vores social run!</h2>
+        
+    </main>
     
 </body>
 </html>
