--- a/events.html
+++ b/events.html
@@ -43,6 +43,27 @@
         <img src="image/events.strik.webp" alt="billeder af strikketøj">
         </section>
         
+        <section>
+            <h2>Majmarked hos Den Gule Cafe!</h2>
+            <article>
+                Kom og vær med til vores festlige majmarked, hvor der er noget for alle! Vi byder på gode tilbud, sjove aktiviteter og underholdning dagen lang. Tag venner og familie med til en dag fyldt med hygge, shopping og oplevelser i dejligt selskab. Glæd dig til en skøn markedsstemning midt i foråret!
+            </article>
+            <img src="image/events.majmarked.webp" alt="billede fra majmarked">
+            <img src="image/events.oel.webp" alt="billede af øl til majmarked">
+            <img src="image/events.torvvideo.mov" alt="video fra majmarked">
+        </section>
+        <footer>
+            <h2>Følg mig på</h2>
+            <img src="image/instagram.logowebp.webp" alt="instagram logo">
+            <img src="image/facebook.logo.webp" alt="facebook logo">
+            <h2>Åbningstider</h2>
+            <p>Man - Lør   09:00-18:00</p>
+            <p>Søn         09:00-16:00</p>
+            <h2>Kontakt mig</h2>
+            <p>Tlf:   26 71 89 67</p>
+            <p>Mail:  dengulecafe@hotmail.com</p>
+            <p>Adresse  Jægergårdsgade 2a, Aarhus C</p>
+          </footer>
 
     </main>
 
