--- a/events.html
+++ b/events.html
@@ -50,7 +50,7 @@
             </article>
             <img src="image/events.majmarked.webp" alt="billede fra majmarked">
             <img src="image/events.oel.webp" alt="billede af øl til majmarked">
-            <video src="image/events.torvvideo.mov" controls></video>
+            <video src="image/events.torvvideo.mov" autoplay loop></video>
         </section>
         <footer>
             <h2>Følg mig på</h2>
