--- a/events.html
+++ b/events.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/events.css">
 </head>
 <body>
+    
     <header>
+        <img src="image/forsidelogo.webp" alt="logo">
     <div class="burger" id="burger">
         <div class="line"></div>
         <div class="line"></div>
