--- a/deals.html
+++ b/deals.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="image/forsidelogo.webp" alt="logo">
     <div class="burger" id="burger">
         <div class="line"></div>
         <div class="line"></div>
