--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <body>
     <header>
 
-        <img src="image/forsidelogo.webp" alt="logo">
+        <img class="forsidelogo" src="image/forsidelogo.webp" alt="logo">
         
     <div class="burger" id="burger">
         <div class="line"></div>
