--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         
         <img class="forsidelogo" src="image/forsidelogo.webp" alt="logo">
+        <img src="image/burgermenu.gul.webp" class="burger" alt="burgermenu">
 
         <div class="burger" id="burger"></div>
         <div class="line"></div>
