--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <hr>
     </header>
     <main>
-        <section>
+        <section class="forsidemenu">
         <h2>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h2>
 
         <article>Hos Den Gule Café inviterer vi dig ind i en varm og afslappet atmosfære, hvor charme og nærvær går hånd i hånd. Her serverer vi mad og drikke med omtanke – alt fra friskbrygget kaffe og skummende cappuccinoer til lækre sandwiches, salater og hjemmebagte kager, som passer perfekt til både morgenkaffe og frokostpause.</article>
@@ -47,7 +47,7 @@
     
         <section>        
             <h2>Deltag i vores fede events!</h2>
-            <article>
+            <article class="infotekst">
             Hos Den Gule Cafe sker der altid noget spændende! 
             Udover vores lækre menu af boller, kaffe og sandwich, inviterer vi dig til at joine vores hyggelige events – fra live musik og quiz-aftener til kreative workshops og vores populærer løbeklub. 
             Følg med, og vær en del af fællesskabet. Vi lover god stemning, sjove oplevelser og selvfølgelig masser af lækker kaffe!
