--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
     
         <section>        
-            <h2>Deltag i vores fede events!</h2>
+            <h2 class="eventsh2">Deltag i vores fede events!</h2>
             <article>
             Hos Den Gule Cafe sker der altid noget spændende! 
             Udover vores lækre menu af boller, kaffe og sandwich, inviterer vi dig til at joine vores hyggelige events – fra live musik og quiz-aftener til kreative workshops og vores populærer løbeklub. 
