--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img class="bowl" src="image/forsidebowl.webp" alt="billede af smoothiebowl">
             <img class="bolle" src="image/forsidebolle.webp" alt="billede af bolle med ost">
             <img class="avocado" src="image/forsideavocado.webp" alt="billede af avocado toast">
-            <button><a href="menu.html">Menu</a></button>
+            <button class="menubutton"><a href="menu.html" class="menukortlink">Menukort</a></button>
         </section>
         
     </section>
