--- a/index.html
+++ b/index.html
@@ -49,22 +49,28 @@
     
         <section>        
             <h2 class="eventsh2">Deltag i vores fede events!</h2>
-            <article>
+            <hr class="eventshr">
+            <article class="eventstekst">
             Hos Den Gule Cafe sker der altid noget spændende! 
             Udover vores lækre menu af boller, kaffe og sandwich, inviterer vi dig til at joine vores hyggelige events – fra live musik og quiz-aftener til kreative workshops og vores populærer løbeklub. 
             Følg med, og vær en del af fællesskabet. Vi lover god stemning, sjove oplevelser og selvfølgelig masser af lækker kaffe!
             </article>
-            <img src="image/forside.løb.webp" alt="billede af folk til løb">
-            <img src="image/forside.keramik.webp" alt="billede af en masse keramik">
-            <img src="image/forside.strik.webp" alt="billede af en der strikker">
-            <button><a href="events.html">Events</a></button>
+            <section class="eventimg">
+            <img class="run" src="image/forside.løb.webp" alt="billede af folk til løb">
+            <img class="keramik" src="image/forside.keramik.webp" alt="billede af en masse keramik">
+            <img class="strik" src="image/forside.strik.webp" alt="billede af en der strikker">
+            <button class="eventbutton"><a href="events.html" class="eventlink">Events</a></button>
+            </section>
         </section>
+       
         <section>
-            <h2>Min cafe på lækre Jægergårdsgade!</h2>
-            <article>Besøg min dejlig cafe på hjørnet af lækre Jægergårdsgade. Kontakt mig for mere info eller spørgsmål 
+            <h2 class="lokationh2">Min cafe på lækre Jægergårdsgade!</h2>
+            <article class="lokationtekst">Besøg min dejlig cafe på hjørnet af lækre Jægergårdsgade. Kontakt mig for mere info eller spørgsmål 
             </article>
-            <button><a href="https://shorturl.at/jxotQ" target="_blank">Find os her</a></button>
-            <img src="image/forside.facade.webp" alt="billede af facaden af caféen">
+            <section class="lokationbox">
+            <button class="lokationbutton"><a href="https://shorturl.at/jxotQ" class="lokationlink" target="_blank">Find os her</a></button>
+            <img class="lokationimg" src="image/forside.facade.webp" alt="billede af facaden af caféen">
+            </section>
         </section>
         <section>
             <h2>Hvad mine kunder siger om mig <3</h2>
