--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
        
         <section>
             <h2 class="lokationh2">Min cafe på lækre Jægergårdsgade!</h2>
+            <hr class="lokationshr">
             <article class="lokationtekst">Besøg min dejlig cafe på hjørnet af lækre Jægergårdsgade. Kontakt mig for mere info eller spørgsmål 
             </article>
             <section class="lokationbox">
