--- a/index.html
+++ b/index.html
@@ -74,24 +74,27 @@
             </section>
         </section>
         <section>
-            <h2>Hvad mine kunder siger om mig <3</h2>
-            <article>
+            <h2 class="reviewh2">Hvad mine kunder siger om mig <3</h2>
+            <hr class="reviewhr">
+            <section class="reviewboks">
+            <article class="haticeboks">
                 ⭐⭐⭐⭐⭐
-                <h3>Hatice Ozalp</h3>
+                <h3 class="hatice">Hatice Ozalp</h3>
                 “We enjoyed everything on our table, very good quality products, would love to come back 🤍”
             </article>
 
-            <article>
+            <article class="lotteboks">
                 ⭐⭐⭐⭐⭐
-                <h3>Lotte Fogde</h3>
+                <h3 class="lotte">Lotte Fogde</h3>
                 “Super hyggelig. Rar stemning. 
                 God mad og sød betjening.”
             </article>
-            <article>
+            <article class="galboks">
                 ⭐⭐⭐⭐⭐
-                <h3>Gal Florsheim</h3>
+                <h3 class="gal">Gal Florsheim</h3>
                 “Fabulous!!! everything is superb, the pastry, the coffee, the acai. Super great.”
             </article>
+        </section>
         </section>
     </main>
   <footer>
