--- a/index.html
+++ b/index.html
@@ -97,10 +97,14 @@
         </section>
         </section>
     </main>
+    
   <footer>
+    <hr class="footerhr">
     <h2>Følg mig på</h2>
-    <img src="image/instagram.logowebp.webp" alt="instagram logo">
-    <img src="image/facebook.logo.webp" alt="facebook logo">
+    <section>
+    <img class="instagramlogo" src="image/instagram.logowebp.webp" alt="instagram logo">
+    <img class="facebooklogo" src="image/facebook.logo.webp" alt="facebook logo">
+    </section>
     <h2>Åbningstider</h2>
     <p>Man - Lør   09:00-18:00</p>
     <p>Søn         09:00-16:00</p>
