--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
   <footer>
     <hr class="footerhr">
     <h2>Følg mig på</h2>
-    <a href="https://www.instagram.com/dengulecafe/?hl=da"><img src="image/instagram.logowebp.webp" alt="instagram logo"></a>
-
-    <a href="https://www.facebook.com/search/top?q=den%20gule%20cafe"><img src="image/facebook.logo.webp" alt="facebook logo"></a>
+    
     <section>
+        <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram.logowebp.webp" alt="instagram logo"></a>
 
+        <a href="https://www.facebook.com/search/top?q=den%20gule%20cafe"><img class="facebooklogo" src="image/facebook.logo.webp" alt="facebook logo"></a>
     </section>
     <h2>Åbningstider</h2>
     <p>Man - Lør   09:00-18:00</p>
