--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <hr class="footerhr">
     <h2>Følg mig på</h2>
     
-    <section>
+    <section class="logoer">
         <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram.logowebp.webp" alt="instagram logo"></a>
 
         <a href="https://www.facebook.com/search/top?q=den%20gule%20cafe"><img class="facebooklogo" src="image/facebook.logo.webp" alt="facebook logo"></a>
