--- a/index.html
+++ b/index.html
@@ -107,13 +107,16 @@
 
         <a href="https://www.facebook.com/search/top?q=den%20gule%20cafe"><img class="facebooklogo" src="image/facebook.logo.webp" alt="facebook logo"></a>
     </section>
-    <h2>Åbningstider</h2>
+    <section class="footerinfo">
+        <h2>Åbningstider</h2>
     <p>Man - Lør   09:00-18:00</p>
     <p>Søn         09:00-16:00</p>
     <h2>Kontakt mig</h2>
     <p>Tlf:   26 71 89 67</p>
     <p>Mail:  dengulecafe@hotmail.com</p>
     <p>Adresse  Jægergårdsgade 2a, Aarhus C</p>
+    </section>
+    
   </footer>
 
 </body>
