--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     <h2>Følg mig på</h2>
     
     <section class="logoer">
-        <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram.logowebp.webp" alt="instagram logo"></a>
+        <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram-logo.webp" alt="instagram logo"></a>
 
-        <a href="https://www.facebook.com/search/top?q=den%20gule%20cafe"><img class="facebooklogo" src="image/facebook.logo.webp" alt="facebook logo"></a>
+        <a href="https://www.facebook.com/search/top?q=den%20gule%20cafe"><img class="facebooklogo" src="image/facebook-logo.webp" alt="facebook logo"></a>
     </section>
     <section class="footerinfo">
         <h2>Åbningstider</h2>
