--- a/menu.html
+++ b/menu.html
@@ -34,9 +34,12 @@
         <hr>
     </header>
     <main>
+        <section class="">
         <h2><a href="#morgenmad">Morgenmad</a></h2>
         <h2><a href="#frokost">Frokost</a></h2>
         <h2><a href="#drikkevarer">Drikkevarer</a></h2>
+        </section>
+    
         <section>
             <h3 id="morgenmad">Morgenmad</h3>
         
