--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         
-        <img class="forsidelogo" src="image/forsidelogo.webp" alt="logo">
+        <a href="index.html"><img class="forsidelogo" src="image/forsidelogo.webp" alt="logo"></a>
         
         <input type="checkbox" id="burger-toggle" class="burger-checkbox">
 
