--- a/menu.html
+++ b/menu.html
@@ -79,10 +79,10 @@
                
         </section>
         <section>
-            <h3 id="frokost">Frokost</h3>
+            <h3 id="frokost" class="frokosth3">Frokost</h3>
 
-                <h4>Grillet croissant 55 kr. </h4>
-                <p>Serranoskine og ost</p>
+                <h4 class="frokosth4">Grillet croissant 55 kr. </h4>
+                <p class="frokostp">Serranoskine og ost</p>
 
                 <h4>Toasten 85 kr.</h4>
                 <p>Froccaciabrød, pesto, aioli, serranoskinke og ost.</p>
@@ -92,10 +92,11 @@
 
                 <h4>Sandwich m. Serranoskinke eller soltørrede tomat 95 kr.</h4>
                 <p>Froccaciabrød, pesto, aioli, mozzarella, basilikum, pinjekerner og rucola. </p>
-
-            <img src="image/frokost.avocado.webp" alt="avocado">
-            <img src="image/frokost.bord.webp" alt="bord">
-            <img src="image/frokost.sandwich.webp" alt="sandwich">
+            <section class="frokostbillede">
+            <img src="image/frokost.avocado.webp" class="avocado" alt="avocado">
+            <img src="image/frokost.bord.webp" class="bord" alt="bord">
+            <img src="image/frokost.sandwich.webp" class="sandwich" alt="sandwich">
+            </section>
         </section>
         <section>
             <h3 id="drikkevarer">Drikkevarer</h3>
