--- a/menu.html
+++ b/menu.html
@@ -78,6 +78,7 @@
                 </section>    
                
         </section>
+        <hr class="frokosthr">
         <section>
             <h3 id="frokost" class="frokosth3">Frokost</h3>
 
@@ -98,8 +99,9 @@
             <img src="image/frokost.sandwich.webp" class="sandwich" alt="sandwich">
             </section>
         </section>
+        <hr class="drikkevarerhr">
         <section>
-            <h3 id="drikkevarer">Drikkevarer</h3>
+            <h3 id="drikkevarer" class="drikkevarerh3">Drikkevarer</h3>
 
                 <h4>kaffe</h4>
                 <ul>
@@ -164,13 +166,15 @@
                     <li>Gin og rabarber</li>
                     <li>Gin og hyldeblomst</li>
                 </ul>
-
-            <img src="image/drikkevarer.drinks.webp" alt="drinks">
-            <img src="image/drikkevarer.juice.webp" alt="juice">
-            <img src="image/drikkevarer.kaffe.webp" alt="kaffe">
-            <img src="image/drikkevarer.kakao.webp" alt="kakao">
-            <img src="image/drikkevarer.spritz.webp" alt="spritz">
-            <img src="image/drikkevarer.vin.webp" alt="vin">
+<section class="drikkevarerbilleder">
+    <img src="image/drikkevarer.drinks.webp" class="drinks" alt="drinks">
+    <img src="image/drikkevarer.juice.webp" class="juice" alt="juice">
+    <img src="image/drikkevarer.kaffe.webp" class="kaffe" alt="kaffe">
+    <img src="image/drikkevarer.kakao.webp" class="kakao" alt="kakao">
+    <img src="image/drikkevarer.spritz.webp" class="spritz" alt="spritz">
+    <img src="image/drikkevarer.vin.webp" class="vin" alt="vin">
+</section>
+           
         </section>
 
     </main>
