--- a/deals.html
+++ b/deals.html
@@ -36,25 +36,29 @@
 
     <main>
         <div class="container">
-            <div class="input-section">
+            <div class="beloeb">
                 <label for="amount">Indtast beløb</label>
                 <div class="amount-input">
                     <span>100 kr.</span>
-                    <input type="number" id="amount" min="100" max="3000" placeholder="Beløb">
+                    <input type="number" id="amount" min="100" max="3000" placeholder="______">
                     <span>3000 kr.</span>
                 </div>
             </div>
             
-            <div class="quantity-section">
+            <div class="antal">
                 <label>Antal</label>
                 <div class="quantity-input">
                     <input type="number" value="1" min="1">
                 </div>
             </div>
             
-            <button class="add-to-cart">Tilføj til kurv</button>
+            <section class="koebbox">
+            <button class="koeb">Tilføj til kurv</button>
+            </section>
         </div>
-        <img src="image/deals.madbord.webp" alt="billede til gavekortside">
+        <section class="imgbox">
+        <img class="dealsimg" src="image/deals.madbord.webp" alt="billede til gavekortside">
+        </section>
     </main>
     <footer>
         <hr class="footerhr">
