--- a/deals.html
+++ b/deals.html
@@ -62,7 +62,7 @@
     </main>
     <footer>
         <hr class="footerhr">
-        <h2>Følg mig på</h2>
+        <h2 class="footerinfo">Følg mig på</h2>
         
         <section class="logoer">
             <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram-logo.webp" alt="instagram logo"></a>
