--- a/deals.html
+++ b/deals.html
@@ -56,8 +56,10 @@
             <button class="koeb">Tilføj til kurv</button>
             </section>
         </div>
+        <section class="imgbox">
+            <img class="dealsimg" src="image/deals.madbord.webp" class="dealsimg" alt="billede til gavekortside">
+        </section>
         
-        <img class="dealsimg" src="image/deals.madbord.webp" alt="billede til gavekortside">
        
     </main>
     <footer>
