event forside opdateret

--- a/events.html
+++ b/events.html
@@ -37,10 +37,15 @@
    
     <main>
         <section>
+            <section class="textevent1">
             <h2 class="eventsh2">Kom med til vores social run!</h2>
+            
+            <hr class="infohr">
+
             <article class="infotext">
                 Hver uge inviterer vi alle – uanset niveau – til vores hyggelige Social Run. Vi mødes ved Den Gule Café og tager en afslappet løbetur sammen gennem byen. Efter løbet venter der kaffe og hygge i caféen. Så tag dine løbesko på, og vær med til at skabe en god stemning, hvor fællesskab og bevægelse er i fokus. Alle er mere end velkomne!
             </article>
+        </section>
             <section class="runimages">
             <img class="run" src="image/events.løb.webp" alt="billede af folk der løber">
             <img class="run2" src="image/events.løb1.webp" alt="billede af folk der venter på at løbe">
