--- a/deals.html
+++ b/deals.html
@@ -35,27 +35,28 @@
     </header>
 
     <main>
-        <div class="container">
-            <div class="beloeb">
-                <label for="amount">Indtast beløb</label>
-                <div class="amount-input">
-                    <span>100 kr.</span>
-                    <input type="number" id="amount" min="100" max="3000" placeholder="______">
-                    <span>3000 kr.</span>
-                </div>
-            </div>
+        <section class="container">
+                <section class="shoppunkter">
+                <article class="beloeb">
+                    <label for="amount">Indtast beløb</label>
+                    <p class="amount-input">
+                        <span>100 kr.</span>
+                        <input type="number" id="amount" min="100" max="3000" placeholder="">
+                        <span>3000 kr.</span>
+                    </p>
+                </article>
             
-            <div class="antal">
-                <label>Antal</label>
-                <div class="quantity-input">
-                    <input type="number" value="1" min="1">
-                </div>
-            </div>
-            
-            <section class="koebbox">
-            <button class="koeb">Tilføj til kurv</button>
+                <div class="antal">
+                    <label>Antal</label>
+                    <div class="quantity-input">
+                        <input type="number" value="" min="1">
+                    </div>
+                </div> 
+                <section class="koebbox">
+                    <button class="koeb">Tilføj til kurv</button>
+                </section>
             </section>
-        </div>
+        </section>
         <section class="imgbox">
             <img class="dealsimg" src="image/deals.madbord.webp" class="dealsimg" alt="billede til gavekortside">
         </section>
