--- a/events.html
+++ b/events.html
@@ -39,7 +39,7 @@
         <section>
             <section class="textevent1">
             <h2 class="eventsh2">Kom med til vores social run!</h2>
-            
+
             <hr class="infohr">
 
             <article class="infotext">
@@ -54,6 +54,9 @@
        <hr class="runhr">
         <section>
             <h2 class="kreah2">Kom til Kreadage hos den Gule Cafe</h2>
+
+            <hr class="kreainfohr">
+            
         <article class="kreatext">Slip kreativiteten løs sammen med os! Vi inviterer til hyggelige kreadage, hvor du kan prøve kræfter med både strik, keramik og meget mere. Det er en perfekt anledning til at mødes, skabe noget med hænderne og nyde en god kop kaffe. Uanset om du er nybegynder eller erfaren, er alle velkomne til at være med og dele inspiration og gode stunder.</article>
         <section class="kreaimages">
         <img class="smykker" src="image/events.smykker.webp" alt="billeder af msykker">
