--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
     <hr class="morgenhr">
         <section>
             <h3 id="morgenmad" class="morgenmad">Morgenmad</h3>
-        
+            <hr class="morgenmadhr">
                 <h4 class="morgenmenu">Det søde</h4>
                     <ul class="morgentekst">
                         <li>Kardemommesnurre 32 kr.</li>
