--- a/deals.html
+++ b/deals.html
@@ -66,7 +66,8 @@
     <footer>
         <hr class="footerhr">
         <h2 class="footerinfo">Følg mig på</h2>
-        
+        <img src="image/den gule cafe logolilla.webp" alt="">
+
         <section class="logoer">
             <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram-logo.webp" alt="instagram logo"></a>
     
