--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 Udover vores lækre menu af boller, kaffe og sandwich, inviterer vi dig til at joine vores hyggelige events – fra live musik og quiz-aftener til kreative workshops og vores populærer løbeklub. 
                 Følg med, og vær en del af fællesskabet. Vi lover god stemning, sjove oplevelser og selvfølgelig masser af lækker kaffe!
                 </article>
+                <button class="eventbuttondesktop"><a href="events.html" class="eventlink">Events</a></button>
             </section>
 
             <section class="eventimg">
