--- a/deals.html
+++ b/deals.html
@@ -66,7 +66,7 @@
     <footer>
         <hr class="footerhr">
         <h2 class="footerinfo">Følg mig på</h2>
-        <img src="image/den gule cafe logolilla.webp" alt="">
+        <img class="roundlogo" src="image/dengulecafe-logo-rund.webp" alt="">
 
         <section class="logoer">
             <a href="https://www.instagram.com/dengulecafe/?hl=da"><img class="instagramlogo" src="image/instagram-logo.webp" alt="instagram logo"></a>
@@ -80,7 +80,7 @@
         <h2>Kontakt mig</h2>
         <p>Tlf:   26 71 89 67</p>
         <p>Mail:  dengulecafe@hotmail.com</p>
-        <p>Adresse  Jægergårdsgade 2a, Aarhus C</p>
+        <p class="pbottom">Adresse  Jægergårdsgade 2a, Aarhus C</p>
         </section>
         
       </footer>
