--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
             <section class="textevent1">
             <h2 class="eventsh2">Kom med til vores social run!</h2>
 
-            <hr class="infohr">
+            <hr class="runinfohr">
 
             <article class="infotext">
                 Hver uge inviterer vi alle – uanset niveau – til vores hyggelige Social Run. Vi mødes ved Den Gule Café og tager en afslappet løbetur sammen gennem byen. Efter løbet venter der kaffe og hygge i caféen. Så tag dine løbesko på, og vær med til at skabe en god stemning, hvor fællesskab og bevægelse er i fokus. Alle er mere end velkomne!
@@ -56,7 +56,7 @@
             <h2 class="kreah2">Kom til Kreadage hos den Gule Cafe</h2>
 
             <hr class="kreainfohr">
-            
+
         <article class="kreatext">Slip kreativiteten løs sammen med os! Vi inviterer til hyggelige kreadage, hvor du kan prøve kræfter med både strik, keramik og meget mere. Det er en perfekt anledning til at mødes, skabe noget med hænderne og nyde en god kop kaffe. Uanset om du er nybegynder eller erfaren, er alle velkomne til at være med og dele inspiration og gode stunder.</article>
         <section class="kreaimages">
         <img class="smykker" src="image/events.smykker.webp" alt="billeder af msykker">
