--- a/menu.html
+++ b/menu.html
@@ -105,7 +105,7 @@
         <hr class="drikkevarerhr">
         <section>
             <h3 id="drikkevarer" class="drikkevarerh3">Drikkevarer</h3>
-
+            <hr class="drikkevarerh3hr">
                 <h4>Kaffe</h4>
                 <ul>
                     <li>Latte 44kr.</li>
