--- a/index.html
+++ b/index.html
@@ -71,16 +71,21 @@
             </section>
         </section>
        
-        <section>
-            <h2 class="lokationh2">Min cafe på lækre Jægergårdsgade!</h2>
-            <hr class="lokationshr">
-            <article class="lokationtekst">Besøg min dejlig cafe på hjørnet af lækre Jægergårdsgade. Kontakt mig for mere info eller spørgsmål 
-            </article>
+        <section class="forsidelokation">
+            <section class="forsidelokationtext">
+                <h2 class="lokationh2">Min cafe på lækre Jægergårdsgade!</h2>
+                <hr class="lokationshr">
+                <article class="lokationtekst">Besøg min dejlig cafe på hjørnet af lækre Jægergårdsgade. Kontakt mig for mere info eller spørgsmål 
+                </article>
+                <button class="lokationbuttondesktop"><a href="https://shorturl.at/jxotQ" class="lokationlink" target="_blank">Find os her</a></button>
+            </section>
+
             <section class="lokationbox">
-            <button class="lokationbutton"><a href="https://shorturl.at/jxotQ" class="lokationlink" target="_blank">Find os her</a></button>
-            <img class="lokationimg" src="image/forside.facade.webp" alt="billede af facaden af caféen">
+                <button class="lokationbutton"><a href="https://shorturl.at/jxotQ" class="lokationlink" target="_blank">Find os her</a></button>
+                <img class="lokationimg" src="image/forside.facade.webp" alt="billede af facaden af caféen">
             </section>
         </section>
+
         <section>
             <h2 class="reviewh2">Hvad mine kunder siger om mig <3</h2>
             <hr class="reviewhr">
