--- a/menu.html
+++ b/menu.html
@@ -145,7 +145,8 @@
                     <li>Æblejuice </li>
                     <li>Appelsinjuice</li>
                 </ul>
-                <h4>Øl</h4>
+                <section class="alkoholdrikke">
+                    <h4>Øl</h4>
                 <ul>
                     <li>Ceres Top 30 kr.</li>
                     <li>Forskelligt udvalg fra Ebeltoft </li>
@@ -169,6 +170,8 @@
                     <li>Gin og rabarber</li>
                     <li>Gin og hyldeblomst</li>
                 </ul>
+                </section>
+                
 <section class="drikkevarerbilleder">
     <img src="image/drikkevarer.drinks.webp" class="drinks" alt="drinks">
     <img src="image/drikkevarer.juice.webp" class="juice" alt="juice">
