--- a/events.html
+++ b/events.html
@@ -67,6 +67,8 @@
         <hr class="majhr">
         <section>
             <h2 class="majh2">Majmarked hos Den Gule Cafe!</h2>
+            <hr class="majmarkedhr">
+
             <article class="majtext">
                 Kom og vær med til vores festlige majmarked, hvor der er noget for alle! Vi byder på gode tilbud, sjove aktiviteter og underholdning dagen lang. Tag venner og familie med til en dag fyldt med hygge, shopping og oplevelser i dejligt selskab. Glæd dig til en skøn markedsstemning midt i foråret!
             </article>
