--- a/index.html
+++ b/index.html
@@ -86,28 +86,27 @@
             </section>
         </section>
 
-        <section>
+        <section class="forsidereview">
             <h2 class="reviewh2">Hvad mine kunder siger om mig <3</h2>
             <hr class="reviewhr">
             <section class="reviewboks">
-            <article class="haticeboks">
-                ⭐⭐⭐⭐⭐
-                <h3 class="hatice">Hatice Ozalp</h3>
-                “We enjoyed everything on our table, very good quality products, would love to come back 🤍”
-            </article>
+                <article class="haticeboks boks">
+                    ⭐⭐⭐⭐⭐
+                    <h3 class="hatice">Hatice Ozalp</h3>
+                    <p>“We enjoyed everything on our table, very good quality products, would love to come back 🤍”</p>
+                </article>
 
-            <article class="lotteboks">
-                ⭐⭐⭐⭐⭐
-                <h3 class="lotte">Lotte Fogde</h3>
-                “Super hyggelig. Rar stemning. 
-                God mad og sød betjening.”
-            </article>
-            <article class="galboks">
-                ⭐⭐⭐⭐⭐
-                <h3 class="gal">Gal Florsheim</h3>
-                “Fabulous!!! everything is superb, the pastry, the coffee, the acai. Super great.”
-            </article>
-        </section>
+                <article class="lotteboks boks">
+                    ⭐⭐⭐⭐⭐
+                    <h3 class="lotte">Lotte Fogde</h3>
+                    <p>“Super hyggelig. Rar stemning. God mad og sød betjening.”</p>
+                </article>
+                <article class="galboks boks">
+                    ⭐⭐⭐⭐⭐
+                    <h3 class="gal">Gal Florsheim</h3>
+                    <p>“Fabulous!!! everything is superb, the pastry, the coffee, the acai. Super great.”</p>
+                </article>
+            </section>
         </section>
     </main>
     
