--- a/events.html
+++ b/events.html
@@ -17,9 +17,9 @@
 
         <!-- Label fungerer som burgerikon og kontrollerer checkboxen -->
         <label for="burger-toggle" class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
             
         </label>
         
