--- a/menu.html
+++ b/menu.html
@@ -16,9 +16,9 @@
 
         <!-- Label fungerer som burgerikon og kontrollerer checkboxen -->
         <label for="burger-toggle" class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
         </label>
         
         <!-- Menuen, som vises, når checkboxen er markeret -->
