--- a/deals.html
+++ b/deals.html
@@ -58,7 +58,7 @@
             </section>
         </section>
         <section class="imgbox">
-            <img class="dealsimg" src="image/deals.madbord.webp" class="dealsimg" alt="billede til gavekortside">
+            <img class="dealsimg" src="image/deals.madbord.webp" alt="billede til gavekortside">
         </section>
         
        
