--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <section class="forsidemenu">
             <section class="forsidemenutext">
-                <h2>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h2>n
+                <h2>Velkommen til Den Gule Café – dit hyggelige tilflugtssted i hjertet af Jægergårdsgade</h2>
                 <hr class="forsidehr">
                 <article class="infotext">Hos Den Gule Café inviterer vi dig ind i en varm og afslappet atmosfære, hvor charme og nærvær går hånd i hånd. Her serverer vi mad og drikke med omtanke – alt fra friskbrygget kaffe og skummende cappuccinoer til lækre sandwiches, salater og hjemmebagte kager, som passer perfekt til både morgenkaffe og frokostpause.</article>
                 <a href="menu.html" class="menukortlinkdesktop">Menukort</a>
