Error fix og kommentar

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 <img class="avocado" src="image/forsideavocado.webp" alt="billede af avocado toast">
                 <a href="menu.html" class="menukortlink">Menukort</a>
             </section>
-        
         </section>
     
         <section class="forsideevents">   
@@ -57,9 +56,9 @@
                 <h2 class="eventsh2">Deltag i vores fede events!</h2>
                 <hr class="eventshr">
                 <article class="eventstekst">
-                Hos Den Gule Cafe sker der altid noget spændende! 
-                Udover vores lækre menu af boller, kaffe og sandwich, inviterer vi dig til at joine vores hyggelige events – fra live musik og quiz-aftener til kreative workshops og vores populærer løbeklub. 
-                Følg med, og vær en del af fællesskabet. Vi lover god stemning, sjove oplevelser og selvfølgelig masser af lækker kaffe!
+                    Hos Den Gule Cafe sker der altid noget spændende! 
+                    Udover vores lækre menu af boller, kaffe og sandwich, inviterer vi dig til at joine vores hyggelige events – fra live musik og quiz-aftener til kreative workshops og vores populærer løbeklub. 
+                    Følg med, og vær en del af fællesskabet. Vi lover god stemning, sjove oplevelser og selvfølgelig masser af lækker kaffe!
                 </article>
                 <a href="events.html" class="eventlinkdesktop">Events</a>
             </section>
@@ -88,7 +87,7 @@
         </section>
 
         <section class="forsidereview">
-            <h2 class="reviewh2">Hvad mine kunder siger om mig <3</h2>
+            <h2 class="reviewh2">Hvad mine kunder siger om mig🤍</h2>
             <hr class="reviewhr">
             <section class="reviewboks">
                 <article class="haticeboks boks">
